--- a/GIWEB/Views/Owners/Details.cshtml
+++ b/GIWEB/Views/Owners/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model GIWEB.Models.Owner
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Consulta do Proprietário";
 }
 
-<h2>Details</h2>
+<h2>@ViewData["Title"]</h2>
 
 <div>
-    <h4>Owners</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -55,6 +54,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Editar</a> |
+    <a asp-action="Index">Voltar</a>
 </div>
