--- a/GIWEB/Views/Owners/Delete.cshtml
+++ b/GIWEB/Views/Owners/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model GIWEB.Models.Owner
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Excluir Proprietário";
 }
 
-<h2>Delete</h2>
+<h2>@ViewData["Title"]</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza de que deseja excluir?</h3>
 <div>
-    <h4>Owners</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -57,7 +56,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Excluir" class="btn btn-danger" /> |
+        <a asp-action="Index">Voltar</a>
     </form>
 </div>
