--- a/GIWEB/Views/Shared/_Layout.cshtml
+++ b/GIWEB/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -30,9 +30,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Início</a></li>
+                    <li><a asp-area="" asp-controller="Owners" asp-action="Index">Proprietários</a></li>
+                    <li><a asp-area="" asp-controller="Properties" asp-action="Index">Imóveis</a></li>
+                    <li><a asp-area="" asp-controller="Tenants" asp-action="Index">Inquilinos</a></li>
+                    <li><a asp-area="" asp-controller="Contracts" asp-action="Index">Contratos</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">Sobre</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contato</a></li>
                 </ul>
             </div>
         </div>
