Create views and update class from Tenants

--- a/GIWEB/Views/Home/Index.cshtml
+++ b/GIWEB/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 
 <h2>GIWEB</h2>
 <hr />
-<h3>Seja bem vindo a sua nova plataforma de Gestão Imobiliária.</h3>
+<h3>Seja bem vindo a sua plataforma Web de Gestão Imobiliária.</h3>
 
-<h6>Selecione a operação desejada no menu a cima.</h6>
+<h6>Selecione a operação desejada na barra de navegação a cima.</h6>
